5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1573_2897.log
== SUBMITION (2019-03-14 12:15:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))


# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.156049
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:16:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("Digite o numero: 11"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.27731
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:16:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("
					11"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.136866
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num =int(input("
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:17:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("11
					"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.162017
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num =int(input("11
                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:17:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("11"))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.172174
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:25:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:11 "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.15206
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:43:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))


# Impressao do dobro do numero()
-- EXECUTION TIME:
0.127909
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:44:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero()
-- EXECUTION TIME:
0.129983
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
11
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:45:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))


# Impressao do dobro do numero()
-- EXECUTION TIME:
0.200124
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:49:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero()
print(num*2)
-- EXECUTION TIME:
0.176509
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
112468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
11888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:49:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero()
int(num*2)
-- EXECUTION TIME:
0.192967
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
11
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:50:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero(num)
print(num*2)
-- EXECUTION TIME:
0.191592
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
112468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
11888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:51:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero(print(num*2))
print(num*2)
-- EXECUTION TIME:
0.127512
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
112468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
11888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:51:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero: print(num*2)
print(num*2)
-- EXECUTION TIME:
0.138124
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
112468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
11888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:52:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero: print(num*2)
print:(num*2)
-- EXECUTION TIME:
0.159533
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 8
    print:(num*2)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:52:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))


# Impressao do dobro do numero: print(num*2)
print(num*2)
-- OUTPUT:
112468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:54:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))


# Impressao do dobro do numero: print(num*2)
print(num*2)
-- EXECUTION TIME:
0.203265
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
